2003-05-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* RootBuilder.cs: throw exception when the tagprefix is not valid or
	not found.

2003-05-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControlParser.cs: return after processing @Register.

2003-05-04  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: Added support for server side includes.

2003-05-03  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateControl.cs: fixed the flags used to find the methods that
	are automatically hooked up on events.

	* TemplateParser.cs: don't compile a source file directly.  Use the
	cache instead.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseParser.cs: Location property is now here. Added a couple of
	convenience methods to throw a ParseException.

	* TemplateParser.cs:
	* TemplateControlParser.cs:
	* PageParser.cs: throw ParseException where appropiate.

2003-05-01  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationFileParser.cs: use the generator to actually parse the
	file.

	* ControlBuilder.cs: small fix in NamingContainerType because
	TemplateBuilders have a null ControlType. When a control is appended
	to a parent, assign the child's parent.

	* UserControlParser.cs: fixed the value of InputFile.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationFileParser.cs: store the Context and override
	BaseVirtualDir so that it's the application path.

	* BaseParser.cs: removed CurrentVirtualPath property.

	* TemplateControlParser.cs: use BaseVirtualDir.

	* UserControlParser.cs: removed CurrentVirtualPath.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TemplateParser.cs: always reference all the assemblies in bin
	directory.

2003-04-30  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ApplicationFileParser.cs: it works now. Prior to these changes, we
	were using the compiler directly.

	* BaseParser.cs: added some useful properties and methods.
